added xunit test + log4net

--- a/FirstAPIApp/appsettings.json
+++ b/FirstAPIApp/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnectionString": "Server=localhost\\SQLEXPRESS; Initial Catalog=club; Trusted_Connection=True; ConnectRetryCount=0; Encrypt=False"
   },
+    "Authentication": {
+      "Domain": "https://localhost:7165",
+      "Audience": "https://localhost:7165",
+      "Secret": "AUTHSECRET_AUTHSECRET"
+    },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
